--- a/api/src/main/resources/db/changelog/data/03-director.yaml
+++ b/api/src/main/resources/db/changelog/data/03-director.yaml
@@ -9,7 +9,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'c56a4180-65aa-42ec-a945-5fd21dec0538'
+                  value: c56a4180-65aa-42ec-a945-5fd21dec0538
               - column:
                   name: name
                   value: 'James Wan'
@@ -25,7 +25,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '7c8e3f8d-fb53-42ef-95b9-439b0917b30f'
+                  value: 7c8e3f8d-fb53-42ef-95b9-439b0917b30f
               - column:
                   name: name
                   value: 'Ishana Shyamalan'
@@ -41,7 +41,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1'
+                  value: f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1
               - column:
                   name: name
                   value: 'Christopher Nolan'
@@ -57,7 +57,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'd4a2c5b3-9f7c-4d32-a0df-7a39e4a2f6b3'
+                  value: d4a2c5b3-9f7c-4d32-a0df-7a39e4a2f6b3
               - column:
                   name: name
                   value: 'Steven Spielberg'
@@ -74,7 +74,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'a3f5d1e2-8b4a-4e6a-9c45-84c2f3b2d3e4'
+                  value: a3f5d1e2-8b4a-4e6a-9c45-84c2f3b2d3e4
               - column:
                   name: name
                   value: 'Kathryn Bigelow'
@@ -90,7 +90,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'b2e8c5f9-6d7e-4e8f-9c2d-3f6e7b5d8e9f'
+                  value: b2e8c5f9-6d7e-4e8f-9c2d-3f6e7b5d8e9f
               - column:
                   name: name
                   value: 'Quentin Tarantino'
@@ -106,7 +106,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'e1a6d9b3-7c5e-4a3f-8b7d-4c5e8f2a7d6c'
+                  value: e1a6d9b3-7c5e-4a3f-8b7d-4c5e8f2a7d6c
               - column:
                   name: name
                   value: 'Greta Gerwig'
@@ -122,7 +122,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7'
+                  value: f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7
               - column:
                   name: name
                   value: 'Alfonso Cuarón'
@@ -138,7 +138,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'd7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e'
+                  value: d7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e
               - column:
                   name: name
                   value: 'Patty Jenkins'
@@ -154,7 +154,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'e8f9c1d2-3b4f-4a5e-8c7d-9b2d4f6g7h8i'
+                  value: f8e16d43-1c1c-4aef-9f12-0e09f3e4cd08
               - column:
                   name: name
                   value: 'Bong Joon-ho'
@@ -170,7 +170,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'g9h8i7j6-k5l4-3m2n-1o0p-9q8r7s6t5u4v'
+                  value: 9b07391a-45ba-48b5-9cb4-2976d00220a3
               - column:
                   name: name
                   value: 'Ava DuVernay'
@@ -186,7 +186,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'w3x2y1z0-a9b8-c7d6-e5f4-g3h2i1j0k9l8'
+                  value: 3cfa0d26-a9c3-4c54-b2f7-bf4e024ea472
               - column:
                   name: name
                   value: 'Guillermo del Toro'
@@ -203,7 +203,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6'
+                  value: 771c2ed4-07be-4b74-a314-1fb84cee3d55
               - column:
                   name: name
                   value: 'Denis Villeneuve'
@@ -219,7 +219,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'e7f8g9h0-i1j2-k3l4-m5n6-o7p8q9r0s1t2'
+                  value: 31866537-7061-4a1a-9702-41061fdb0816
               - column:
                   name: name
                   value: 'Sofia Coppola'
@@ -235,7 +235,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6'
+                  value: f46de83b-6d87-4e2c-aacb-3b0af3537f69
               - column:
                   name: name
                   value: 'Spike Lee'
@@ -251,7 +251,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'k9l8m7n6-o5p4-q3r2-s1t0-u9v8w7x6y5z4'
+                  value: b682f38b-5ef8-44e6-bd4b-d2c507c430ed
               - column:
                   name: name
                   value: 'Lynne Ramsay'
@@ -267,7 +267,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'f4g5h6i7-j8k9-l0m1-n2o3-p4q5r6s7t8u9'
+                  value: 832fd362-f1ea-42b4-84de-7581136b41d4
               - column:
                   name: name
                   value: 'Jordan Peele'
@@ -283,7 +283,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'a2b3c4d5-e6f7-g8h9-i0j1-k2l3m4n5o6p7'
+                  value: a1289c3b-4c1a-4ab6-a0ed-ae79ac9f4d3b
               - column:
                   name: name
                   value: 'Pedro Almodóvar'
@@ -299,7 +299,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'b6c7d8e9-f0g1-h2i3-j4k5-l6m7n8o9p0q1'
+                  value: c9eb277c-0cd1-4bf9-a738-77b639ca223a
               - column:
                   name: name
                   value: 'Chloé Zhao'
@@ -315,7 +315,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4'
+                  value: cc90ecd0-d98a-42c5-a3a2-4e3dabf4ead7
               - column:
                   name: name
                   value: 'David Fincher'
@@ -331,7 +331,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'd3e4f5g6-h7i8-j9k0-l1m2-n3o4p5q6r7s8'
+                  value: 95790581-7db1-447b-ab51-9bb2e9f6a981
               - column:
                   name: name
                   value: 'Agnès Varda'
@@ -347,7 +347,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 't7u8v9w0-x1y2-z3a4-b5c6-d7e8f9g0h1i2'
+                  value: 6e9bbe60-212e-4235-b7c6-80238920e820
               - column:
                   name: name
                   value: 'Wes Anderson'
@@ -363,7 +363,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'z1x2c3v4-b5n6-m7l8-k9j0-h1g2f3d4s5a6'
+                  value: ef30968b-cf60-4a02-83b5-9d2f97067c88
               - column:
                   name: name
                   value: 'Martin Scorsese'
@@ -379,7 +379,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'r6s5d4f3-g2h1-j0k9-l8m7-n6o5p4q3r2t1'
+                  value: b4d74089-b3d6-4878-945b-ea9d0658d547
               - column:
                   name: name
                   value: 'Ridley Scott'
@@ -395,7 +395,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'y7u8i9o0-p1q2-w3e4-r5t6-y7u8i9o0p1a2'
+                  value: aca21223-8f14-438a-8246-235eb4119562
               - column:
                   name: name
                   value: 'James Cameron'
@@ -411,7 +411,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'v3b2n1m4-k5j6-l7h8-g9f0-d1s2a3q4w5e6'
+                  value: 8a0c60c7-93eb-431a-9996-76bca0924a26
               - column:
                   name: name
                   value: 'Francis Ford Coppola'
@@ -427,7 +427,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'j9k8l7m6-n5b4-v3c2-x1z0-w2y3u4i5o6p7'
+                  value: 6d011885-7124-41f1-bf57-4e5117732995
               - column:
                   name: name
                   value: 'Stanley Kubrick'
@@ -443,7 +443,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'm1n2b3v4-c5x6-z7a8-s9d0-f1g2h3j4k5l6'
+                  value: a8378d1f-95eb-4907-a9af-992ef1fa7e2d
               - column:
                   name: name
                   value: 'Tim Burton'
@@ -459,7 +459,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'e5d4c3b2-a1f2-g3h4-i5j6-k7l8m9n0o1p2'
+                  value: 7f4e70e1-984c-41de-a9d7-d3636e019839
               - column:
                   name: name
                   value: 'Guy Ritchie'
@@ -475,7 +475,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'r9s8t7u6-v5w4-x3y2-z1a0-b9c8d7e6f5g4'
+                  value: 182379ab-812d-45fb-a727-19b3b64d2b9c
               - column:
                   name: name
                   value: 'Coen Brothers'
@@ -491,7 +491,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'q1w2e3r4-t5y6-u7i8-o9p0-z1x2c3v4b5n6'
+                  value: efba0788-7473-4cd3-bbb3-017bc296df10
               - column:
                   name: name
                   value: 'Paul Thomas Anderson'
@@ -507,7 +507,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'l7k6j5h4-g3f2-d1s0-a9p8-o7i6u5y4t3r2'
+                  value: 3018ad19-1741-4a2a-a426-63bcbea6519c
               - column:
                   name: name
                   value: 'David Lynch'
