--- a/api/src/main/resources/db/changelog/data/07-movie-country.yaml
+++ b/api/src/main/resources/db/changelog/data/07-movie-country.yaml
@@ -9,297 +9,297 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: '1cce6f34-13d2-4a3d-8c7e-8a7659db8a60' # The Conjuring
+                  value: 1cce6f34-13d2-4a3d-8c7e-8a7659db8a60 # The Conjuring
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a9c8e9a1-bb24-43b4-9e6b-b38ec61b241d' # The Conjuring 2
+                  value: a9c8e9a1-bb24-43b4-9e6b-b38ec61b241d # The Conjuring 2
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'acbef342-c46b-4f1b-8b1d-f4a7c82d6f8c' # The Watchers
+                  value: acbef342-c46b-4f1b-8b1d-f4a7c82d6f8c # The Watchers
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'f18d339f-fa0a-4e0d-8e5c-652e2b45b98c' # Tenet
+                  value: f18d339f-fa0a-4e0d-8e5c-652e2b45b98c # Tenet
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '8c328172-a60f-4ea6-93b1-ca2a5cca2bf0' # Interstellar
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0 # Interstellar
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '62c92d5e-bd34-47e2-ba67-7443014af702' # Inception
+                  value: 62c92d5e-bd34-47e2-ba67-7443014af702 # Inception
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '62c92d5e-bd34-47e2-ba67-7443014af702' # Inception
+                  value: 62c92d5e-bd34-47e2-ba67-7443014af702 # Inception
               - column:
                   name: country_id
-                  value: '8f7b5a0b-7d5b-4f9e-9d8b-89d4a9f47322' # United Kingdom
+                  value: 8f7b5a0b-7d5b-4f9e-9d8b-89d4a9f47322 # United Kingdom
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d' # Gravity
+                  value: 76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d # Gravity
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d' # Gravity
+                  value: 76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d # Gravity
               - column:
                   name: country_id
-                  value: '8f7b5a0b-7d5b-4f9e-9d8b-89d4a9f47322' # United Kingdom
+                  value: 8f7b5a0b-7d5b-4f9e-9d8b-89d4a9f47322 # United Kingdom
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: '1b8f6a44-ae99-4cfa-b15e-cde77b45b8de' # Roma
+                  value: 1b8f6a44-ae99-4cfa-b15e-cde77b45b8de # Roma
               - column:
                   name: country_id
-                  value: 'e3d9a2a5-4b76-48c0-8c4c-f28f6c8a30e0' # Mexico
+                  value: e3d9a2a5-4b76-48c0-8c4c-f28f6c8a30e0 # Mexico
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p' # Wonder Woman
+                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p' # Wonder Woman
+                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
               - column:
                   name: country_id
-                  value: 'b8f5a4d7-e3c1-45f3-9b83-5f3672d27f68' # Germany
+                  value: b8f5a4d7-e3c1-45f3-9b83-5f3672d27f68 # Germany
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p' # Wonder Woman
+                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
               - column:
                   name: country_id
-                  value: 'a2c75d8e-6d1a-4cfc-805d-d88d51aebf6f' # Australia
+                  value: a2c75d8e-6d1a-4cfc-805d-d88d51aebf6f # Australia
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3' # Selma
+                  value: h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3 # Selma
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6' # The Shape of Water
+                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6 # The Shape of Water
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6' # The Shape of Water
+                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6 # The Shape of Water
               - column:
                   name: country_id
-                  value: 'f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9' # Canada
+                  value: f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9 # Canada
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6' # Birdman
+                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6 # Birdman
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6' # Birdman
+                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6 # Birdman
               - column:
                   name: country_id
-                  value: 'e3d9a2a5-4b76-48c0-8c4c-f28f6c8a30e0' # Mexico
+                  value: e3d9a2a5-4b76-48c0-8c4c-f28f6c8a30e0 # Mexico
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4' # Monster
+                  value: o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4 # Monster
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6' # Nomadland
+                  value: b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6 # Nomadland
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'd1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6' # No Country for Old Men
+                  value: d1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6 # No Country for Old Men
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6' # The Grand Budapest Hotel
+                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6 # The Grand Budapest Hotel
               - column:
                   name: country_id
-                  value: 'b8f5a4d7-e3c1-45f3-9b83-5f3672d27f68' # Germany
+                  value: b8f5a4d7-e3c1-45f3-9b83-5f3672d27f68 # Germany
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6' # The Grand Budapest Hotel
+                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6 # The Grand Budapest Hotel
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8' # The Revenant
+                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8 # The Revenant
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8' # The Revenant
+                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8 # The Revenant
               - column:
                   name: country_id
-                  value: 'f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9' # Canada
+                  value: f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9 # Canada
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4' # Eternals
+                  value: p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4 # Eternals
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6' # The Big Lebowski
+                  value: j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6 # The Big Lebowski
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9' # Moonrise Kingdom
+                  value: l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9 # Moonrise Kingdom
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3' # Dune
+                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3 # Dune
               - column:
                   name: country_id
-                  value: '1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4' # United States
+                  value: 1f6e6d3b-3f88-4cbb-9baf-16b72c7d06c4 # United States
 
         - insert:
             tableName: movie_country
             columns:
               - column:
                   name: movie_id
-                  value: 'a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3' # Dune
+                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3 # Dune
               - column:
                   name: country_id
-                  value: 'f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9' # Canada
+                  value: f3e4f5a7-e6b4-4a3e-b5b9-c5ebf7f1d0f9 # Canada
