--- a/api/src/main/resources/db/changelog/data/06-movie.yaml
+++ b/api/src/main/resources/db/changelog/data/06-movie.yaml
@@ -9,7 +9,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '1cce6f34-13d2-4a3d-8c7e-8a7659db8a60'
+                  value: 1cce6f34-13d2-4a3d-8c7e-8a7659db8a60
               - column:
                   name: name
                   value: 'The Conjuring'
@@ -27,7 +27,7 @@ databaseChangeLog:
                   value: "Paranormal investigators Ed and Lorraine Warren work to help a family terrorized by a dark presence in their farmhouse."
               - column:
                   name: director_id
-                  value: 'c56a4180-65aa-42ec-a945-5fd21dec0538' # James Wan
+                  value: c56a4180-65aa-42ec-a945-5fd21dec0538 # James Wan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/wVYREutTvI2tmxr6ujrHT704wGF.jpg'
@@ -43,7 +43,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'a9c8e9a1-bb24-43b4-9e6b-b38ec61b241d'
+                  value: a9c8e9a1-bb24-43b4-9e6b-b38ec61b241d
               - column:
                   name: name
                   value: 'The Conjuring 2'
@@ -61,7 +61,7 @@ databaseChangeLog:
                   value: 'Ed and Lorraine Warren travel to North London to help a single mother raising four children alone in a house plagued by a supernatural spirit.'
               - column:
                   name: director_id
-                  value: 'c56a4180-65aa-42ec-a945-5fd21dec0538' # James Wan
+                  value: c56a4180-65aa-42ec-a945-5fd21dec0538 # James Wan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/zEqyD0SBt6HL7W9JQoWwtd5Do1T.jpg'
@@ -77,7 +77,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'acbef342-c46b-4f1b-8b1d-f4a7c82d6f8c'
+                  value: acbef342-c46b-4f1b-8b1d-f4a7c82d6f8c
               - column:
                   name: name
                   value: 'The Watchers'
@@ -95,7 +95,7 @@ databaseChangeLog:
                   value: 'A young artist gets stranded in an extensive, immaculate forest in western Ireland, where, after finding shelter, she becomes trapped alongside three strangers, stalked by mysterious creatures each night.'
               - column:
                   name: director_id
-                  value: '7c8e3f8d-fb53-42ef-95b9-439b0917b30f' # Ishana Shyamalan
+                  value: 7c8e3f8d-fb53-42ef-95b9-439b0917b30f # Ishana Shyamalan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/vZVEUPychdvZLrTNwWErr9xZFmu.jpg'
@@ -111,7 +111,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'f18d339f-fa0a-4e0d-8e5c-652e2b45b98c'
+                  value: f18d339f-fa0a-4e0d-8e5c-652e2b45b98c
               - column:
                   name: name
                   value: 'Tenet'
@@ -129,7 +129,7 @@ databaseChangeLog:
                   value: 'Armed with only the word Tenet, and fighting for the survival of the entire world, CIA operative, The Protagonist, journeys through a twilight world of international espionage on a global mission that unfolds beyond real time.'
               - column:
                   name: director_id
-                  value: 'f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1' # Christopher Nolan
+                  value: f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1 # Christopher Nolan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/aCIFMriQh8rvhxpN1IWGgvH0Tlg.jpg'
@@ -145,7 +145,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '8c328172-a60f-4ea6-93b1-ca2a5cca2bf0'
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: name
                   value: 'Interstellar'
@@ -163,7 +163,7 @@ databaseChangeLog:
                   value: 'When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a team of researchers, to find a new planet for humans.'
               - column:
                   name: director_id
-                  value: 'f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1' # Christopher Nolan
+                  value: f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1 # Christopher Nolan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/gEU2QniE6E77NI6lCU6MxlNBvIx.jpg'
@@ -179,7 +179,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '62c92d5e-bd34-47e2-ba67-7443014af702'
+                  value: 62c92d5e-bd34-47e2-ba67-7443014af702
               - column:
                   name: name
                   value: 'Inception'
@@ -197,7 +197,7 @@ databaseChangeLog:
                   value: 'A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O., but his tragic past may doom the project and his team to disaster.'
               - column:
                   name: director_id
-                  value: 'f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1' # Christopher Nolan
+                  value: f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1 # Christopher Nolan
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/ljsZTbVsrQSqZgWeep2B1QiDKuh.jpg'
@@ -213,7 +213,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d'
+                  value: 76a9e23a-c8e6-4d1f-9c2d-8b3f47a91a1d
               - column:
                   name: name
                   value: 'Gravity'
@@ -231,7 +231,7 @@ databaseChangeLog:
                   value: 'Two astronauts work together to survive after an accident leaves them stranded in space.'
               - column:
                   name: director_id
-                  value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7' # Alfonso Cuarón
+                  value: f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7 # Alfonso Cuarón
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/kZ2nZw8D681aphje8NJi8EfbL1U.jpg'
@@ -247,7 +247,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: '1b8f6a44-ae99-4cfa-b15e-cde77b45b8de'
+                  value: 1b8f6a44-ae99-4cfa-b15e-cde77b45b8de
               - column:
                   name: name
                   value: 'Roma'
@@ -266,7 +266,7 @@ databaseChangeLog:
                     A year in the life of a middle-class family's maid in Mexico City in the early 1970s.
               - column:
                   name: director_id
-                  value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7' # Alfonso Cuarón
+                  value: f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7 # Alfonso Cuarón
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/dtIIyQyALk57ko5bjac7hi01YQ.jpg'
@@ -282,7 +282,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p'
+                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p
               - column:
                   name: name
                   value: 'Wonder Woman'
@@ -300,7 +300,7 @@ databaseChangeLog:
                   value: 'Diana, princess of the Amazons, leaves her home to fight a war, discovering her full powers and true destiny.'
               - column:
                   name: director_id
-                  value: 'd7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e' # Patty Jenkins
+                  value: d7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e # Patty Jenkins
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/imekS7f1OuHyUP2LAiTEM0zBzUz.jpg'
@@ -316,7 +316,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3'
+                  value: h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3
               - column:
                   name: name
                   value: 'Selma'
@@ -335,7 +335,7 @@ databaseChangeLog:
                     A chronicle of Dr. Martin Luther King, Jr.'s campaign to secure equal voting rights via an epic march from Selma to Montgomery, Alabama, in 1965.
               - column:
                   name: director_id
-                  value: 'g9h8i7j6-k5l4-3m2n-1o0p-9q8r7s6t5u4v' # Ava DuVernay
+                  value: 9b07391a-45ba-48b5-9cb4-2976d00220a3 # Ava DuVernay
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/wq4lhMc4BuOyQqe1ZGzhxLyy3Uk.jpg'
@@ -351,7 +351,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6'
+                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6
               - column:
                   name: name
                   value: 'The Shape of Water'
@@ -369,7 +369,7 @@ databaseChangeLog:
                   value: 'At a top secret research facility in the 1960s, a lonely janitor forms a unique relationship with an amphibious creature that is being held in captivity.'
               - column:
                   name: director_id
-                  value: 'w3x2y1z0-a9b8-c7d6-e5f4-g3h2i1j0k9l8' # Guillermo del Toro
+                  value: 3cfa0d26-a9c3-4c54-b2f7-bf4e024ea472 # Guillermo del Toro
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/9zfwPffUXpBrEP26yp0q1ckXDcj.jpg'
@@ -385,7 +385,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6'
+                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6
               - column:
                   name: name
                   value: 'Birdman or'
@@ -403,7 +403,7 @@ databaseChangeLog:
                   value: 'A washed-up superhero actor attempts to revive his fading career by writing, directing, and starring in a Broadway production.'
               - column:
                   name: director_id
-                  value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7' # Alfonso Cuarón
+                  value: f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7 # Alfonso Cuarón
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/rHUg2AuIuLSIYMYFgavVwqt1jtc.jpg'
@@ -419,7 +419,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4'
+                  value: o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4
               - column:
                   name: name
                   value: 'Monster'
@@ -437,7 +437,7 @@ databaseChangeLog:
                   value: 'Based on the life of Aileen Wuornos, a Daytona Beach prostitute who became a serial killer.'
               - column:
                   name: director_id
-                  value: 'd7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e' # Patty Jenkins
+                  value: d7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e # Patty Jenkins
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/aevmNtJCNG4ZlfEeEGZ79frMUes.jpg'
@@ -453,7 +453,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6'
+                  value: b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6
               - column:
                   name: name
                   value: 'Nomadland'
@@ -471,7 +471,7 @@ databaseChangeLog:
                   value: 'A woman in her sixties who, after losing everything in the Great Recession, embarks on a journey through the American West, living as a van-dwelling modern-day nomad.'
               - column:
                   name: director_id
-                  value: 'b6c7d8e9-f0g1-h2i3-j4k5-l6m7n8o9p0q1' # Chloé Zhao
+                  value: c9eb277c-0cd1-4bf9-a738-77b639ca223a # Chloé Zhao
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/k5XzjWihzum1YgLMlqRDRZDmVMn.jpg'
@@ -487,7 +487,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'd1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6'
+                  value: d1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6
               - column:
                   name: name
                   value: 'No Country for Old Men'
@@ -505,7 +505,7 @@ databaseChangeLog:
                   value: 'Violence and mayhem ensue after a hunter stumbles upon a drug deal gone wrong and more than two million dollars in cash near the Rio Grande.'
               - column:
                   name: director_id
-                  value: 'r9s8t7u6-v5w4-x3y2-z1a0-b9c8d7e6f5g4' # Coen brothers
+                  value: 182379ab-812d-45fb-a727-19b3b64d2b9c # Coen brothers
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/bj1v6YKF8yHqA489VFfnQvOJpnc.jpg'
@@ -521,7 +521,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6'
+                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6
               - column:
                   name: name
                   value: 'The Grand Budapest Hotel'
@@ -540,7 +540,7 @@ databaseChangeLog:
                     A writer encounters the owner of an aging high-class hotel, who tells him of his early years serving as a lobby boy in the hotel's glorious years under an exceptional concierge.
               - column:
                   name: director_id
-                  value: 't7u8v9w0-x1y2-z3a4-b5c6-d7e8f9g0h1i2' # Wes Anderson
+                  value: 6e9bbe60-212e-4235-b7c6-80238920e820 # Wes Anderson
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/eWdyYQreja6JGCzqHWXpWHDrrPo.jpg'
@@ -556,7 +556,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8'
+                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8
               - column:
                   name: name
                   value: 'The Revenant'
@@ -574,7 +574,7 @@ databaseChangeLog:
                   value: 'A frontiersman on a fur trading expedition in the 1820s fights for survival after being mauled by a bear and left for dead by members of his own hunting team.'
               - column:
                   name: director_id
-                  value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7' # Alfonso Cuarón
+                  value: f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7 # Alfonso Cuarón
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/tSaBkriE7TpbjFoQUFXuikoz0dF.jpg'
@@ -590,7 +590,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4'
+                  value: p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4
               - column:
                   name: name
                   value: 'Eternals'
@@ -608,7 +608,7 @@ databaseChangeLog:
                   value: 'The saga of the Eternals, a race of immortal beings who lived on Earth and shaped its history and civilizations.'
               - column:
                   name: director_id
-                  value: 'b6c7d8e9-f0g1-h2i3-j4k5-l6m7n8o9p0q1' # Chloé Zhao
+                  value: c9eb277c-0cd1-4bf9-a738-77b639ca223a # Chloé Zhao
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/lFByFSLV5WDJEv3KabbdAF959F2.jpg'
@@ -624,7 +624,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6'
+                  value: j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6
               - column:
                   name: name
                   value: 'The Big Lebowski'
@@ -642,7 +642,7 @@ databaseChangeLog:
                   value: 'Jeff "The Dude" Lebowski, mistaken for a millionaire of the same name, seeks restitution for his ruined rug and enlists his bowling buddies to help get it.'
               - column:
                   name: director_id
-                  value: 'r9s8t7u6-v5w4-x3y2-z1a0-b9c8d7e6f5g4' # Coen brothers
+                  value: 182379ab-812d-45fb-a727-19b3b64d2b9c # Coen brothers
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/9mprbw31MGdd66LR0AQKoDMoFRv.jpg'
@@ -658,7 +658,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9'
+                  value: l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9
               - column:
                   name: name
                   value: 'Moonrise Kingdom'
@@ -676,7 +676,7 @@ databaseChangeLog:
                   value: 'A pair of young lovers flee their New England town, which causes a local search party to fan out and find them.'
               - column:
                   name: director_id
-                  value: 't7u8v9w0-x1y2-z3a4-b5c6-d7e8f9g0h1i2' # Wes Anderson
+                  value: 6e9bbe60-212e-4235-b7c6-80238920e820 # Wes Anderson
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/xrziXRHRQ7c7YLIehgSJY8GQBsx.jpg'
@@ -692,7 +692,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: 'a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3'
+                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3
               - column:
                   name: name
                   value: 'Dune'
@@ -711,7 +711,7 @@ databaseChangeLog:
                     Feature adaptation of Frank Herbert's science fiction novel about the son of a noble family entrusted with the protection of the most valuable asset and most vital element in the galaxy.
               - column:
                   name: director_id
-                  value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6' # Denis Villeneuve
+                  value: 771c2ed4-07be-4b74-a314-1fb84cee3d55 # Denis Villeneuve
               - column:
                   name: poster_url
                   value: 'https://image.tmdb.org/t/p/original/d5NXSklXo0qyIYkgV94XAgMIckC.jpg'
