--- a/api/src/main/resources/db/changelog/data/11-comment.yaml
+++ b/api/src/main/resources/db/changelog/data/11-comment.yaml
@@ -9,10 +9,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: "c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5"
+                  value: c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: user_id
                   value: "user|66f8511afb3983f9045fc7c9"
@@ -31,10 +31,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: "72c8a1de-6f7a-42b3-8263-e3b56b9d5f0e"
+                  value: 72c8a1de-6f7a-42b3-8263-e3b56b9d5f0e
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: user_id
                   value: "user|66f8511afb3983f9045fc7c9"
@@ -53,10 +53,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: "f97bfa82-4b64-48c1-b9b6-b52eec19104f"
+                  value: f97bfa82-4b64-48c1-b9b6-b52eec19104f
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: user_id
                   value: "user|66f8511afb3983f9045fc7c9"
@@ -68,7 +68,7 @@ databaseChangeLog:
                   value: "I agree! That twist was insane, I did not see it coming at all!"
               - column:
                   name: parent_comment_id
-                  value: "c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5"
+                  value: c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5
               - column:
                   name: is_deleted
                   value: "false"
@@ -78,10 +78,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: "35e4de5b-b805-45b6-b5b5-91b51b9fbb1f"
+                  value: 35e4de5b-b805-45b6-b5b5-91b51b9fbb1f
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: user_id
                   value: "user|66f8511afb3983f9045fc7c9"
@@ -93,7 +93,7 @@ databaseChangeLog:
                   value: "Same here! I had to rewatch the last 30 minutes just to catch all the clues."
               - column:
                   name: parent_comment_id
-                  value: "f97bfa82-4b64-48c1-b9b6-b52eec19104f"
+                  value: f97bfa82-4b64-48c1-b9b6-b52eec19104f
               - column:
                   name: is_deleted
                   value: "false"
@@ -103,10 +103,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  value: "e4d0f179-7919-437f-b28b-4d73f3f246e5"
+                  value: e4d0f179-7919-437f-b28b-4d73f3f246e5
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: 8c328172-a60f-4ea6-93b1-ca2a5cca2bf0
               - column:
                   name: user_id
                   value: "user|66f8511afb3983f9045fc7c9"
@@ -118,7 +118,7 @@ databaseChangeLog:
                   value: "It’s rare to see such a well-crafted visual experience. The director’s vision was spot on!"
               - column:
                   name: parent_comment_id
-                  value: "72c8a1de-6f7a-42b3-8263-e3b56b9d5f0e"
+                  value: 72c8a1de-6f7a-42b3-8263-e3b56b9d5f0e
               - column:
                   name: is_deleted
                   value: "false"
