--- a/api/src/main/resources/db/changelog/tables/comment-reaction.yaml
+++ b/api/src/main/resources/db/changelog/tables/comment-reaction.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: varchar(255)
+                  type: uuid
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
@@ -16,7 +16,7 @@ databaseChangeLog:
                     unique: true
               - column:
                   name: comment_id
-                  type: varchar(255)
+                  type: uuid
                   constraints:
                     nullable: false
                     foreignKeyName: fk_comment
