--- a/api/src/main/resources/db/changelog/tables/genre.yaml
+++ b/api/src/main/resources/db/changelog/tables/genre.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: varchar(255)
+                  type: uuid
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
