--- a/api/src/main/resources/db/changelog/tables/movie-country.yaml
+++ b/api/src/main/resources/db/changelog/tables/movie-country.yaml
@@ -8,13 +8,13 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  type: varchar(255)
+                  type: uuid
                   constraints:
                     nullable: false
                     foreignKeyName: fk_movie
               - column:
                   name: country_id
-                  type: varchar(255)
+                  type: uuid
                   constraints:
                     nullable: false
                     foreignKeyName: fk_country
