--- a/api/src/main/resources/db/changelog/tables/movie.yaml
+++ b/api/src/main/resources/db/changelog/tables/movie.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: varchar(255)
+                  type: uuid
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
@@ -41,7 +41,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: director_id
-                  type: varchar(255)
+                  type: uuid
                   constraints:
                     nullable: true
                     foreignKeyName: fk_director
